construction de l'histoir

--- a/choice-red.html
+++ b/choice-red.html
@@ -43,7 +43,7 @@
     <section>
         <section>
             <img src="assets/img/door.png" />
-            <h1>Description de la situation, blablabl magicien, blablabla</h1>
+            <h1>Vous avez choisi un Orc, vous devez maintenat choisir si vous êtes un homme ou une femmes, et votre classe : <br>Guerrier</h1>
         </section>
     </section>
 </main>
