--- a/choice-dark-blue.html
+++ b/choice-dark-blue.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        Les Aventures de Olórin le mage 
+        Les Aventures dans le monde de Kønix
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,20 +19,28 @@
 <body id="choice-dark-blue">
 <main>
     <section>
-        <h2>Description du choix à faire</h2>
+        <h2>Choisissez votre Races</h2>
         <div>
             <form method="get" action="">
                 <div>
                     <input type="radio" id="choice-1" name="choice" value="choice-1">
-                    <label for="choice-1">Choix 1</label>
+                    <label for="choice-1">Homme : Les hommes sont polyvalent et équilibré; ils ont de bonnes realtions avec les autres races sauf les orcs leurs énemies juré! Vous
+                    commencerz votre histoir dans la ville de GLAMA</label>
                 </div>
                 <div>
                     <input type="radio" id="choice-2" name="choice" value="choice-2">
-                    <label for="choice-1">Choix 2</label>
+                    <label for="choice-1">Elfe : Les elfes sont des joalier hors paire, élégant, agiles, discret, abiles et sages; ils ont de bonnes relations avec les hommes mais ne peuvent pas tolèrer 
+                    les naims, mais les orcs restent l'énnemi commun. </label>
                 </div>
                 <div>
                     <input type="radio" id="choice-3" name="choice" value="choice-3">
-                    <label for="choice-1">Choix 3</label>
+                    <label for="choice-1">Naim : Les naims sont spécialisés dans le minage de ressources, le commerce et la création d'armes runiques. Ils haïssent les elfes depuis 50ans, 
+                    ils ont de bonne relation avec les hommes mais à la vue d'un Orc ils rentrent dans une rage inarrétable. Vous débuterez votre histoire dans la cité sous la montagne de KLINWIG'H </label>
+                </div>
+                 <div>
+                    <input type="radio" id="choice-3" name="choice" value="choice-3">
+                    <label for="choice-1">Orc : Les Orcs sont des guerriers avec une grande capacité physique, ils forgents des lames et pointe de flêches imbibés de magie noir mais pas très résistantes.
+                    ils voient dans le noir et sont plus fort durant la nuit. Banis de touts les royaumes, ils sont l'énemie commun de tout les peuples</label>
                 </div>
                 <div>
                     <input type="submit" value="Valider le choix" />
@@ -43,7 +51,10 @@
     <section>
         <section>
             <img src="assets/img/door.png" />
-            <h1>Description de la situation, blablabl magicien, blablabla</h1>
+            <h1>Bonjour bienvenue dans le monde de Kønix, vous aller incarner un personnage de votre choix.Chacunes de vos déscision aura une conséquences dans la trame de l'histoire.
+            Dans un premier temps vous aller devoir définir votre personnage qui vous corresponde. Il éxiste 4 Races différentes que vous pouvez incarner : 
+            <br> Les Hommes <br> les Elfes <br> Les naims <br> les orcs
+            </h1>
         </section>
     </section>
 </main>
